--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
-                                                    <div class="height_large"></div>
+                                                    <!--<div class="height_large"></div>-->
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p">
                                                         <div class="sc_promo_image_wrap" style="right:unset; left:0;">
                                                             <div class="sc_promo_image bg_image_1">
@@ -1103,6 +1103,7 @@
                                                 <div class="column-inner">
                                                     <!--<div class="sc_content sc_content_default" style="padding-right: 150px;">-->
                                                     <div class="sc_content sc_content_default">
+                                                        <div class="height_tiny hide_on_mobile"></div>
                                                         <h6 class="sc_item_subtitle sc_content_subtitle sc_align_right sc_item_title_style_default">Vicinato</h6>
                                                         <h2 class="sc_item_title sc_content_title sc_align_right sc_item_title_style_default">Più SERVIZI<br>PIù AREE PER I PICCOLI</h2>
                                                         <div class="sc_content_container"></div>
@@ -1167,7 +1168,7 @@
                                                     <a id="sc_anchor_contacts" class="sc_anchor sc_anchor_default" title="Contatti" data-icon="icon-email" data-url=""></a>
 
                                                     <div id="sc_googlemap_1_wrap" class="sc_googlemap_wrap">
-                                                        <div id="sc_googlemap_1" class="sc_googlemap sc_googlemap_default h92vh" style="padding-top: 25px;" data-zoom="16" data-style="dark">
+                                                        <div id="sc_googlemap_1" class="sc_googlemap sc_googlemap_default h92vh" data-zoom="16" data-style="dark">
                                                             <iframe src="https://snazzymaps.com/embed/382113" width="100%" height="100%" style="border:none;"></iframe>
                                                         </div>
                                                     </div>
