cambio testo pagina 6/7

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
 																							</svg>
                                                                                         </a>
                                                                                         <h6 class="sc_services_item_title">
-                                                                                            <a href="#">Wi-Fi libero</a>
+                                                                                            <a href="#">Classe energetica A3</a>
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
                                                                                             <a href="#" title="View all posts in Apartments">Apartments</a>,
@@ -920,7 +920,7 @@
 																							</svg>
                                                                                         </a>
                                                                                         <h6 class="sc_services_item_title">
-                                                                                            <a href="#">Lavatrici smart</a>
+                                                                                            <a href="#">Impianti Tecnologici</a>
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
                                                                                             <a href="#" title="View all posts in Apartments">Apartments</a>,
@@ -946,7 +946,7 @@
 																							</svg>
                                                                                         </a>
                                                                                         <h6 class="sc_services_item_title">
-                                                                                            <a href="#">area BBQ</a>
+                                                                                            <a href="#">Smart Home</a>
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
                                                                                             <a href="#" title="View all posts in Apartments">Apartments</a>,
@@ -967,7 +967,7 @@
 																							</svg>
                                                                                         </a>
                                                                                         <h6 class="sc_services_item_title">
-                                                                                            <a href="#">posto parcheggio</a>
+                                                                                            <a href="#">Finiture</a>
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
                                                                                             <a href="#" title="View all posts in Apartments">Apartments</a>,
@@ -1006,7 +1006,7 @@
 																							</svg>
                                                                                         </a>
                                                                                         <h6 class="sc_services_item_title">
-                                                                                            <a href="#">piscina</a>
+                                                                                            <a href="#">Servizi</a>
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
                                                                                             <a href="#" title="View all posts in Apartments">Apartments</a>,
@@ -1034,7 +1034,7 @@
 																							</svg>
                                                                                         </a>
                                                                                         <h6 class="sc_services_item_title">
-                                                                                            <a href="#">Asciugatrice</a>
+                                                                                            <a href="#">Sicurezza</a>
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
                                                                                             <a href="#" title="View all posts in Interior">Interior</a>,
@@ -1076,11 +1076,10 @@
                                                             <div class="sc_promo_text_inner">
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
-                                                                <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">olona greenway</h2>
-                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Per praticare sport e per passare il tempo libero all'aria aperta, il complesso è situato vicino all'olona greenway, un percorso ciclo-pedonale immerso nel verde, molto apprezzato da coloro che già lo frequentano.
-                                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                                                <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Location</h2>
+                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Il residence è circondato da importanti aree verdi ed è situato vicino all'olona greenway: una lunga strada in mezzo ai boschi
+                                                                    e ai campi dove si può passeggiare in tranquillità ed essere in contatto con la natura.
+                                                                    La presenza di alberi e di altri elementi della natura hanno un effetto positivo sul nostro benessere e circondarsi dal verde aumenta anche la qualità dell'attività fisica, con benefici anche sulla nostra salute.
                                                                 </div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                 </div>
