--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                                 <img src="images/Render/Esterne/POST.jpg" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 
 
-                                                <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['1000']" data-height="['630']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
+                                                <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['1100']" data-height="['630']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
                                                     data-transform_out="opacity:0;s:300;" data-start="1500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
                                                 </div>
 
@@ -310,8 +310,8 @@
                                                             <div class="sc_promo_text_inner">
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default">Appartamenti di lusso</h6>
                                                                 <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Il Progetto</h2>
-                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Realizzare nuove abitazioni oggi non significa solo edificare nuovi immobili, ma costruire vere e proprie soluzioni abitative... 
-                                                                    che si muovono nel presente per essere già nel futuro</div>
+                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Realizzare nuove abitazioni, oggi, non significa solo edificare nuovi immobili, ma costruire vere e proprie soluzioni abitative... 
+                                                                    che si muovono nel presente per essere già nel futuro.</div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                     <!--
                                                                     <a href="#" class="sc_button sc_button_simple sc_button_size_normal sc_button_icon_left">
@@ -401,10 +401,10 @@
                                                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                                                 </div>-->
                                                                 <ul>
-                                                                    <li>Gli eleganti appartamenti sono pensati per offrire il massimo comfort con moderne tecnologie che garantiscono pretazioni tecniche, pratiche e funzionali di altissimo livello</li>
-                                                                    <li>Un design contemporaneo, leggero, (arioso?) grazie alla presenza delle grandi vetrate che catturano luce e danno calore e luminosità agli ambienti regalando il piacere di vivere la propria casa</li>
-                                                                    <li>I grandi terrazzi sottolineano l'importanza del rapporto con l'esterno</li>
-                                                                    <li>Tutto è pensato per offrire comfort, sicurezza, benessere</li>
+                                                                    <li>Gli eleganti appartamenti sono pensati per offrire il massimo comfort con moderne tecnologie che garantiscono pretazioni tecniche, pratiche e funzionali di altissimo livello.</li>
+                                                                    <li>Un design contemporaneo, leggero, (arioso?) grazie alla presenza delle grandi vetrate che catturano luce e danno calore e luminosità agli ambienti regalando il piacere di vivere la propria casa.</li>
+                                                                    <li>I grandi terrazzi sottolineano l'importanza del rapporto con l'esterno.</li>
+                                                                    <li>Tutto è pensato per offrire comfort, sicurezza, benessere.</li>
                                                                   </ul>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                 </div>
@@ -1089,7 +1089,7 @@
                                                 <div class="column-inner">
                                                     <div class="height_large"></div>
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p" style="height: 500px;">
-                                                        <div class="sc_promo_image_wrap" style="width: 60%;">
+                                                        <div class="sc_promo_image_wrap" style="width: 55%;">
                                                             <div class="sc_promo_image bg_image_1">
                                                                 <img src="images/olona/greenway.jpeg" style="height: 100%; width: 100%; object-fit: cover; position: absolute;">
                                                             </div>
