--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <section class="no-col-padding columns-stretch content-middle" style="min-height: 90vh; display: flex; align-items: center;">
                                 <div class="container">
                                     <div class="row">
-                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-diamond-light" data-url="#new_complex"></a>
+                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Progetto" data-icon="icon-diamond-light" data-url="#new_complex"></a>
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
@@ -353,7 +353,7 @@
                                                                                     <div class="sc_skills_item">
                                                                                         <div class="sc_skills_total" data-start="0" data-stop="540" data-step="13" data-max="1250" data-speed="15" data-duration="400" data-ed="">0</div>
                                                                                     </div>
-                                                                                    <div class="sc_skills_item_title">Lavori in corso da</div>
+                                                                                    <div class="sc_skills_item_title">Giorni dall'inizio</div>
                                                                                 </div>
                                                                             </div>
                                                                             <div class="sc_skills_column trx_addons_column-1_4">
@@ -381,7 +381,7 @@
                             <section class="no-col-padding columns-stretch content-middle" style="min-height: 80vh;">
                                 <div class="container">
                                     <div class="row">
-                                        <a id="sc_anchor_new_complex_2" class="sc_anchor sc_anchor_default" title="Finiture" data-icon="icon-star-2" data-url="#new_complex_2"></a>
+                                        <a id="sc_anchor_new_complex_2" class="sc_anchor sc_anchor_default" title="Design & Qualità" data-icon="icon-star-2" data-url="#new_complex_2"></a>
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
@@ -906,7 +906,7 @@
                                                                     <div class="sc_services sc_services_iconed" data-slides-per-view="3" data-slides-min-width="250">
                                                                         <div class="sc_services_columns sc_item_columns trx_addons_columns_wrap columns_padding_bottom">
                                                                             <div class="trx_addons_column-1_3 ">
-                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top">
+                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top" id="box-1">
                                                                                     <div class="sc_services_item_header">
                                                                                         <div id="sc_services_1559316197_icon-modem" class="sc_services_item_icon sc_icon_type_svg">
                                                                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="500px" height="500px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
@@ -920,7 +920,7 @@
 																								241.318,215.335 241.318,274.249 15.695,274.249 15.695,485.937 484.305,485.937 484.305,274.249 "/>
 																							</svg>
                                                                                         </div>
-                                                                                        <h6 class="sc_services_item_title">
+                                                                                        <h6 class="sc_services_item_title" >
                                                                                             Classe energetica A3
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
@@ -931,7 +931,7 @@
                                                                                 </div>
                                                                             </div>
                                                                             <div class="trx_addons_column-1_3 ">
-                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top">
+                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top" id="box-2">
                                                                                     <div class="sc_services_item_header">
                                                                                         <div id="sc_services_1559316197_icon-laundry" class="sc_services_item_icon sc_icon_type_svg">
                                                                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="500px" height="500px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
@@ -953,7 +953,7 @@
                                                                                 </div>
                                                                             </div>
                                                                             <div class="trx_addons_column-1_3 ">
-                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top">
+                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top" id="box-3">
                                                                                     <div class="sc_services_item_header">
                                                                                         <div id="sc_services_1559316197_icon-cart" class="sc_services_item_icon sc_icon_type_svg">
                                                                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="500px" height="500px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
@@ -979,7 +979,7 @@
                                                                                 </div>
                                                                             </div>
                                                                             <div class="trx_addons_column-1_3 ">
-                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top">
+                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top" id="box-4">
                                                                                     <div class="sc_services_item_header">
                                                                                         <div id="sc_services_1559316197_icon-parking" class="sc_services_item_icon sc_icon_type_svg">
                                                                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="500px" height="500px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
@@ -1000,7 +1000,7 @@
                                                                                 </div>
                                                                             </div>
                                                                             <div class="trx_addons_column-1_3 ">
-                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top">
+                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top" id="box-5">
                                                                                     <div class="sc_services_item_header">
                                                                                         <div id="sc_services_1559316197_icon-swimming-pool" class="sc_services_item_icon sc_icon_type_svg">
                                                                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="500px" height="500px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
@@ -1039,7 +1039,7 @@
                                                                                 </div>
                                                                             </div>
                                                                             <div class="trx_addons_column-1_3 ">
-                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top">
+                                                                                <div class="sc_services_item without_content with_icon sc_services_item_featured_top" id="box-6">
                                                                                     <div class="sc_services_item_header">
                                                                                         <div id="sc_services_1559316197_icon-ironing" class="sc_services_item_icon sc_icon_type_svg">
                                                                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="500px" height="500px" viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
