Sistema alcune cose
Tolti un po' di div a caso, rimpiazzati con padding.
Sistemate le piantine che non venivano visualizzate interamente.

--- a/index.html
+++ b/index.html
@@ -549,9 +549,8 @@
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
-                                                    <div class="height_large"></div>
-                                                    <div class="height_tiny"></div>
-                                                    <div class="sc_content sc_content_default">
+                                                    <!--<div class="height_medium"></div>-->
+                                                    <div class="sc_content sc_content_default main-title">
                                                         <!--<h6 class="sc_item_subtitle sc_content_subtitle sc_align_center sc_item_title_style_shadow">03</h6>-->
                                                         <h2 class="sc_item_title sc_content_title sc_align_center sc_item_title_style_shadow">Pianta</h2>
                                                     </div>
@@ -597,22 +596,13 @@
                                                                                                         </li>
                                                                                                     </ul>
                                                                                                     <div class="height_small"></div>
-                                                                                                    <!--
-                                                                                                    <div class="sc_item_button sc_button_wrap">
-                                                                                                        <a href="#" class="sc_button sc_button_default sc_button_size_normal sc_button_icon_left">
-                                                                                                            <span class="sc_button_text">
-																												<span class="sc_button_title">Prenota un tour</span>
-                                                                                                            </span>
-                                                                                                        </a>
-                                                                                                    </div>
-                                                                                                    -->
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
                                                                                                 <div class="column-inner">
-                                                                                                    <figure class="my_figure">
+                                                                                                    <figure class="my_figure" style="padding-top: 100px;">
                                                                                                         <div>
-                                                                                                            <img class="little_maps" src="images/Piantine_2/PIANO TERRA dx.png" alt="01" />
+                                                                                                            <img src="images/Piantine_2/PIANO TERRA dx.png" alt="01" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -672,7 +662,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure class="my_figure">
                                                                                                         <div>
-                                                                                                            <img class="little_maps" src="images/Piantine_2/PIANO TERRA sx.png" alt="02" />
+                                                                                                            <img src="images/Piantine_2/PIANO TERRA sx.png" alt="02" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -728,7 +718,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure class="my_figure">
                                                                                                         <div>
-                                                                                                            <img class="little_maps" src="images/Piantine_2/PIANO 1 dx.png" alt="03" />
+                                                                                                            <img src="images/Piantine_2/PIANO 1 dx.png" alt="03" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -784,7 +774,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure class="my_figure">
                                                                                                         <div>
-                                                                                                            <img class="little_maps" src="images/Piantine_2/PIANO 1 sx.png" alt="04" />
+                                                                                                            <img src="images/Piantine_2/PIANO 1 sx.png" alt="04" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -840,7 +830,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure class="my_figure">
                                                                                                         <div>
-                                                                                                            <img class="little_maps" src="images/Piantine_2/PIANO 2 dx.png" alt="05" />
+                                                                                                            <img src="images/Piantine_2/PIANO 2 dx.png" alt="05" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -896,7 +886,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure class="my_figure">
                                                                                                         <div>
-                                                                                                            <img class="little_maps" src="images/Piantine_2/PIANO 2 sx.png" alt="06" />
+                                                                                                            <img src="images/Piantine_2/PIANO 2 sx.png" alt="06" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -911,7 +901,7 @@
                                                             </div>
                                                         </aside>
                                                     </div>
-                                                    <div class="height_medium hide_on_mobile"></div>
+                                                    <!--<div class="height_medium hide_on_mobile"></div>-->
                                                     <!--<div class="height_tiny"></div>-->
                                                 </div>
                                             </div>
@@ -1209,36 +1199,36 @@
                                 </div>
                             </section>
 
-                            <section class="full-height-section no-col-padding columns-stretch content-middle bg_image_4 scheme_dark">
+                            <section class="full-height-section no-col-padding columns-stretch content-middle scheme_dark">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="columns_wrap">
                                             <div class="column_container">
                                                 <div class="column-inner">
-                                                    <div class="cqtooltip-wrapper hotspots-style-1" data-opacity="1" data-tooltipanimation="grow" data-tooltipstyle="light" data-trigger="hover" data-maxwidth="240" data-marginoffset="" data-isdisplayall="off" data-displayednum="1">
+                                                    <div class="cqtooltip-wrapper hotspots-style-1 " data-opacity="1" data-tooltipanimation="grow" data-tooltipstyle="light" data-trigger="hover" data-maxwidth="240" data-marginoffset="" data-isdisplayall="off" data-displayednum="1">
                                                         <img src="images/Esterni_2/05.jpg"/>
-                                                        <div class="cq-hotspots" style="width: 80vw;">
-                                                            <div class="hotspot-item pulse-white" data-top="50%" data-left="73%">
+                                                        <div class="cq-hotspots">
+                                                            <div class="hotspot-item pulse-white" data-top="50%" data-left="55%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="&lt;span class=&quot;translation-chunk&quot; data-align=&quot;0:10&quot;&gt;PARAPETTO IN CRISTALLO&lt;/span&gt;" data-arrowposition="">
                                                                     <span></span>
                                                                 </a>
                                                             </div>
-                                                            <div class="hotspot-item pulse-white" data-top="30%" data-left="50%">
+                                                            <div class="hotspot-item pulse-white" data-top="30%" data-left="40%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="FIORIERE" data-arrowposition="top">
                                                                     <span></span>
                                                                 </a>
                                                             </div>
-                                                            <div class="hotspot-item pulse-white" data-top="77%" data-left="75%">
+                                                            <div class="hotspot-item pulse-white" data-top="77%" data-left="67%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="AREA RELAX" data-arrowposition="top">
                                                                     <span></span>
                                                                 </a>
                                                             </div>
-                                                            <div class="hotspot-item pulse-white" data-top="20%" data-left="83%">
+                                                            <div class="hotspot-item pulse-white" data-top="20%" data-left="70%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="OMBREGGIANTI" data-arrowposition="top">
                                                                     <span></span>
                                                                 </a>
                                                             </div>
-                                                            <div class="hotspot-item pulse-white" data-top="50%" data-left="20%">
+                                                            <div class="hotspot-item pulse-white" data-top="45%" data-left="20%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="AMPI BALCONI" data-arrowposition="top">
                                                                     <span></span>
                                                                 </a>
